Deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spring-web-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: spring-web-app
  template:
    metadata:
      labels:
        app: spring-web-app
    spec:
      containers:
        - name: spring-web-app
          image: akhilkm02/spring-web-app:latest  # Replace with your image path
          ports:
            - containerPort: 8080
