Route.yml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: spring-web-app-route
spec:
  to:
    kind: Service
    name: spring-web-app-service
  port:
    targetPort: 8080
  tls:
    termination: edge  # Optional, use if HTTPS is required
